fixed some bugs found with find_bugs (like static inner class & Integer.valueOf instead of new Integer)